Bug 513003 - Plasmashell doesn't display anything after display hotplug
Summary: Plasmashell doesn't display anything after display hotplug
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.5.80
Platform: ROSA RPMs Linux
: VHI grave
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression, wayland-only
Depends on:
Blocks:
 
Reported: 2025-12-06 11:37 UTC by Victor Ryzhykh
Modified: 2026-01-08 20:25 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.0
Sentry Crash Report:


Attachments
journalctl (17.07 KB, text/plain)
2025-12-06 12:52 UTC, Victor Ryzhykh
Details
journalctl (309.48 KB, text/plain)
2025-12-06 12:54 UTC, Victor Ryzhykh
Details
Screen after waking up (175.26 KB, image/jpeg)
2025-12-07 11:11 UTC, Victor Ryzhykh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Victor Ryzhykh 2025-12-06 11:37:43 UTC
Yesterday, December 5th, after building the latest updates to version 6.5.80,
after the monitor turned off while idle, when trying to continue working,
the monitor no longer turned on.
Only a black screen with a cursor.
After building update packages daily in the previous days, this problem did not occur.
I have this on a desktop computer with Nvidia.
Now I'll install the latest updates on my laptop with hybrid graphics and test the screen activation on it,
after the monitor has been idle, on an external monitor.

Operating System: ROSA Fresh Desktop 13
KDE Plasma Version: 6.5.80
KDE Frameworks Version: 6.21.0
Qt Version: 6.10.1
Kernel Version: 6.18.0-generic-1rosa13-x86_64 (64-bit)
Graphics Platform: Wayland

Processors: 8 × Intel® Core™ i7-7700K CPU @ 4.20GHz
Memory: 32 ГиБ of RAM (31.3 ГиБ usable)
Graphics Processor: NVIDIA GeForce RTX 3050
Manufacturer: Gigabyte Technology Co., Ltd.
Product Name: B250M-D3H
Comment 1 Victor Ryzhykh 2025-12-06 12:09:46 UTC
On a laptop with hybrid graphics, there is no problem after activating the monitor after being idle.
The laptop is connected to the same monitor as the desktop computer.
The same proprietary NVIDIA drivers are installed as on the desktop computer.


Operating System: ROSA Fresh Desktop 13
KDE Plasma Version: 6.5.80
KDE Frameworks Version: 6.21.0
Qt Version: 6.10.1
Kernel Version: 6.18.0-generic-1rosa13-x86_64 (64-bit)
Graphics Platform: Wayland

Processors: 16 × 11th Gen Intel® Core™ i7-11800H @ 2.30GHz
Memory: 40 ГиБ of RAM (38.8 ГиБ usable)
Graphics Processor 1: Intel® UHD Graphics
Graphics Processor 2: NVIDIA GeForce RTX 3050 Ti Laptop GPU
Manufacturer: ASUSTeK COMPUTER INC.
Product Name: ROG Zephyrus M16 GU603HE_GU603HE
System Version: 1.0
Comment 2 Victor Ryzhykh 2025-12-06 12:52:37 UTC
Created attachment 187385 [details]
journalctl

Part of the journalctl -b log output after activating the screen.
Comment 3 Victor Ryzhykh 2025-12-06 12:54:11 UTC
Created attachment 187386 [details]
journalctl

The entire log file for the current user session.
Comment 4 Victor Ryzhykh 2025-12-07 11:11:34 UTC
Created attachment 187412 [details]
Screen after waking up

I will attach a photo taken after activating the screen.
If some applications were running before the screen went to sleep, they are displayed on the screen and can be used.
Only the main screen itself remains black.
From the dolphin window, using the context menu, you can launch the konsole, and from the konsole you can launch other applications.
Comment 5 Victor Ryzhykh 2025-12-07 16:57:17 UTC
If you simply turn off the monitor using the monitor power button and then turn the monitor back on, the same behavior will occur.
The screen is black, but applications continue to run.
Comment 6 Nate Graham 2025-12-08 18:04:35 UTC
These lines in the log look very suspicious:

дек 06 15:43:51 aquarius kactivitymanagerd[1721]: There are no outputs - creating placeholder screen
дек 06 15:43:51 aquarius ksecretd[1485]: There are no outputs - creating placeholder screen
дек 06 15:43:51 aquarius polkit-kde-authentication-agent-1[1725]: There are no outputs - creating placeholder screen
дек 06 15:43:51 aquarius plasmashell[1702]: There are no outputs - creating placeholder screen
дек 06 15:43:51 aquarius kded6[1679]: There are no outputs - creating placeholder screen
дек 06 15:43:51 aquarius plasmashell[1702]: requesting unexisting screen available rect -1
дек 06 15:43:51 aquarius xdg-desktop-portal-kde[1870]: There are no outputs - creating placeholder screen
дек 06 15:43:51 aquarius plasmashell[1702]: file:///usr/share/plasma/plasmoids/org.kde.plasma.pager/contents/ui/main.qml:315: TypeError: Cannot read property 'virtualDesktop' of null
дек 06 15:43:51 aquarius plasmashell[1702]: file:///usr/share/plasma/plasmoids/org.kde.plasma.pager/contents/ui/main.qml:315: TypeError: Cannot read property 'virtualDesktop' of null
дек 06 15:43:51 aquarius plasmashell[1702]: file:///usr/share/plasma/plasmoids/org.kde.plasma.pager/contents/ui/main.qml:315: TypeError: Cannot read property 'virtualDesktop' of null
дек 06 15:43:51 aquarius plasmashell[1702]: file:///usr/share/plasma/plasmoids/org.kde.plasma.pager/contents/ui/main.qml:315: TypeError: Cannot read property 'virtualDesktop' of null
дек 06 15:43:51 aquarius org_kde_powerdevil[1726]: There are no outputs - creating placeholder screen
дек 06 15:43:51 aquarius dbus-daemon[1500]: [session uid=501 pid=1500] Activating service name='org.kde.KSplash' requested by ':1.29' (uid=501 pid=1702 comm="/usr/bin/plasmashell --no-respawn")
дек 06 15:43:52 aquarius kscreenlocker_greet[2125]: There are no outputs - creating placeholder screen
дек 06 15:43:53 aquarius kscreenlocker_greet[2125]: QWaylandGLContext: Failed to create the decorations EGLContext. Decorations will not be drawn.
дек 06 15:43:53 aquarius kscreenlocker_greet[2125]: QWaylandGLContext: Failed to create the decorations EGLContext. Decorations will not be drawn.
дек 06 15:43:53 aquarius kscreenlocker_greet[2125]: QWaylandGLContext: Failed to create the decorations EGLContext. Decorations will not be drawn.
дек 06 15:44:03 aquarius audit[2173]: USER_AUTH pid=2173 uid=501 auid=501 ses=3 msg='op=PAM:unix_chkpwd acct="w" exe="/usr/sbin/unix_chkpwd" hostname=? addr=? terminal=? res=success'
дек 06 15:44:03 aquarius kscreenlocker_greet[2125]: Could not create EGL surface (EGL error 0x3003)
дек 06 15:44:03 aquarius kscreenlocker_greet[2125]: Failed to write to the pipe: Bad file descriptor.
дек 06 15:44:07 aquarius kwin_wayland[1586]: Failed to find a working output layer configuration! Enabled layers:
дек 06 15:44:07 aquarius kwin_wayland[1586]: src QRectF(0,0 2560x1440) -> dst QRect(0,0 2560x1440)
дек 06 15:44:07 aquarius kwin_wayland[1586]: drmModeListLessees() failed: Permission denied
дек 06 15:44:07 aquarius kwin_wayland[1586]: Atomic modeset test failed! Permission denied
дек 06 15:44:07 aquarius kwin_wayland[1586]: Applying output configuration failed!
дек 06 15:44:07 aquarius kwin_wayland[1586]: Failed to find a working output layer configuration! Enabled layers:
дек 06 15:44:07 aquarius audit[1]: SERVICE_START pid=1 uid=0 auid=4294967295 ses=4294967295 msg='unit=getty@tty3 comm="systemd" exe="/usr/lib/systemd/systemd" hostname=? addr=? terminal=? res=success'
Comment 7 Victor Ryzhykh 2025-12-09 00:47:11 UTC
I made the kwin package by reverting this commit
https://invent.kde.org/plasma/kwin/-/commit/c2795747f017a0643b5da5d2078aa0d13309d2a1
Added a patch to the package with the patch -p1 -R parameter.
Now there is no problem after activating the monitor.
Comment 8 Victor Ryzhykh 2025-12-09 11:37:52 UTC
(In reply to Victor Ryzhykh from comment #1)
> On a laptop with hybrid graphics, there is no problem after activating the
> monitor after being idle.
> The laptop is connected to the same monitor as the desktop computer.
> The same proprietary NVIDIA drivers are installed as on the desktop computer.

As it turned out, I didn't see the problem on the laptop because the laptop was connected to the monitor via a Thunderbolt-4 port.
When I started checking without connecting an external monitor, after the monitor woke up, the laptop simply froze.
One of the sensors was blinking constantly and frequently.
I still couldn't start the session.
I had to forcefully shut down the laptop.
I'll update my laptop using the kwin package, which currently supports monitor activation.
Comment 9 Zamundaaa 2025-12-09 22:19:37 UTC
(In reply to Victor Ryzhykh from comment #0)
> Yesterday, December 5th, after building the latest updates to version 6.5.80
Did you also update libkscreen to match? If you combine older libkscreen with newer KWin, things are expected to break.
Comment 10 Victor Ryzhykh 2025-12-10 14:44:53 UTC
(In reply to Zamundaaa from comment #9)
> Did you also update libkscreen to match? If you combine older libkscreen
> with newer KWin, things are expected to break.

I updated libkscreen, and with it I rebuilt other packages that require libkscreen to build the package.
Yesterday I updated again all the packages that had changes made in git.
Including the plasma-wayland-protocols package, as well as the kirigami package from the master branch.
The problem with screen activation persists.
Comment 11 Bug Janitor Service 2025-12-25 03:46:42 UTC
🐛🧹 ⚠️ This bug has been in NEEDSINFO status with no change for at least 15 days. Please provide the requested information, then set the bug status to REPORTED. If there is no change for at least 30 days, it will be automatically closed as RESOLVED WORKSFORME.

For more information about our bug triaging procedures, please read https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging.

Thank you for helping us make KDE software even better for everyone!
Comment 12 Victor Ryzhykh 2025-12-25 11:54:58 UTC
This problem has not gone away.
If you turn off the monitor using the monitor's power button and turn the monitor on again, the system will no longer be usable.
As in the cases described above.
When version 6.5.90 is released and mass testing begins, then work on fixing this problem will probably begin.

The system still works fine with proprietary NVIDIA drivers.
It is completely impossible to use free drivers.
If I make a live CD image, or download this disk image https://mirror.5i.fi/kde-application/neon/images/unstable/20251221-1147/neon-unstable-20251221-1147.iso, when I boot from it onto my computer, I can’t use it.
When I try to launch any program from the menu, for example, the Konsole, the session reboots.
Comment 13 Victor Ryzhykh 2025-12-29 06:12:39 UTC
I checked for this error in kde-linux_202512280254.raw.
https://mirrors.xtom.ee/kde-application/kde-linux/
After loading, everything works fine, since by default there are nvidia-590.48.01 drivers installed.
But if you turn off the monitor, for example, using the monitor's power button, then after turning on the monitor, there will be a black screen with applications running on it.
To restore normal operation, you need to run kwin_wayland --replace.
Comment 14 Zamundaaa 2026-01-07 18:35:08 UTC
I can confirm that. That's not kwin though, it seems that plasmashell doesn't handle the hotplug properly. Some additional information:
- plasmashell doesn't crash at any point (at least not on my system)
- notifications still appear and are the correct size, but they're in the top left
- restarting plasmashell makes it put up panels and the wallpaper as expected

plasmashell log contains
> Jan 07 19:24:40 Xavers-PC plasmashell[389886]: There are no outputs - creating placeholder screen
> Jan 07 19:24:40 Xavers-PC plasmashell[389886]: requesting unexisting screen available rect -1
Comment 15 Bug Janitor Service 2026-01-07 19:16:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8605
Comment 16 Victor Ryzhykh 2026-01-07 20:43:11 UTC
(In reply to Bug Janitor Service from comment #15)
> A possibly relevant merge request was started @
> https://invent.kde.org/plasma/kwin/-/merge_requests/8605

I compiled the kwin package with this patch.
After installing the update, the screen began to turn on correctly after the screen went to sleep.
Comment 17 Akseli Lahtinen 2026-01-08 10:04:42 UTC
I can confirm as well the above kwin patch fixes this issue
Comment 18 Nate Graham 2026-01-08 15:13:34 UTC
That was merged; closing!
Comment 19 Zamundaaa 2026-01-08 16:45:31 UTC
Git commit 9bd523afa0743ec0f4e8be8a2d12f72408341e3f by Xaver Hugl.
Committed on 08/01/2026 at 13:07.
Pushed by zamundaaa into branch 'master'.

wayland/output_order_v1: don't include placeholder outputs in the output order

While internally KWin relies on there always being an output, leaking that
implementation detail to apps confuses plasmashell.

M  +3    -0    src/wayland/output_order_v1.cpp

https://invent.kde.org/plasma/kwin/-/commit/9bd523afa0743ec0f4e8be8a2d12f72408341e3f