wayland/output_order_v1: don't include placeholder outputs in the output order

While internally KWin relies on there always being an output, leaking that
implementation detail to apps confuses plasmashell.

BUG: 513003